--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-numpy==1.23.4
-matplotlib==3.6.2
-scipy==1.9.3
+contourpy==1.3.3
+cycler==0.12.1
+fonttools==4.61.1
+kiwisolver==1.4.9
+matplotlib==3.10.8
+numpy==2.4.0
+packaging==25.0
+pillow==12.1.0
+pyparsing==3.3.1
+python-dateutil==2.9.0.post0
+scipy==1.16.3
+six==1.17.0
