fix: relax dependency versions for python 3.9 compatibility and add pip caching

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-contourpy==1.3.3
-cycler==0.12.1
-fonttools==4.61.1
-kiwisolver==1.4.9
-matplotlib==3.10.8
-numpy==2.4.0
-packaging==25.0
-pillow==12.1.0
-pyparsing==3.3.1
-python-dateutil==2.9.0.post0
-scipy==1.16.3
-six==1.17.0
+contourpy>=1.2.0
+cycler>=0.12.1
+fonttools>=4.50.0
+kiwisolver>=1.4.5
+matplotlib>=3.8.0
+numpy>=1.26.0
+packaging>=23.0
+pillow>=10.0.0
+pyparsing>=3.1.0
+python-dateutil>=2.9.0
+scipy>=1.10.0
+six>=1.16.0
