--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,14 +6,11 @@ on:
   pull_request:
     branches: [ "master", "main" ]
 
-permissions:
-  contents: write
-  pull-requests: write
-  issues: write
-
 jobs:
   quality:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.13
@@ -36,6 +33,8 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     strategy:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
@@ -64,6 +63,8 @@ jobs:
 
   graphs:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.13
@@ -119,6 +120,10 @@ jobs:
     needs: [quality, tests, graphs]
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
     steps:
     - uses: actions/checkout@v4
     - name: Download Test Results
