refactor: modularize pyoctaveband architecture and implement FilterBank class
- Split __init__.py into core, filter_design, frequencies, and utils modules.
- Implement OctaveFilterBank class for coefficient reuse and improved performance.
- Expand support for multiple filter types (Butterworth, Chebyshev, Elliptic, Bessel).
- Update README.md with class-based usage and new architectural overview.
- Enhance generate_graphs.py with filter comparisons and impulse response plots.
- Add comprehensive test suite (parametric, performance, and advanced analysis).
- Maintain full backward compatibility in the public API.

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ "master", "main" ]
 
+permissions:
+  contents: write
+  pull-requests: write
+  issues: write
+
 jobs:
   quality:
     runs-on: ubuntu-latest
@@ -54,11 +59,16 @@ jobs:
     - name: Run tests
       run: |
         pytest --junitxml=test-results-${{ matrix.python-version }}.xml
+    - name: Run Filter Benchmark
+      run: |
+        python scripts/benchmark_filters.py
     - name: Upload Test Results
       uses: actions/upload-artifact@v4
       with:
         name: test-results-${{ matrix.python-version }}
-        path: test-results-${{ matrix.python-version }}.xml
+        path: |
+          test-results-${{ matrix.python-version }}.xml
+          filter_benchmark_report.md
       if: always()
 
   graphs:
