refactor: resolve all SonarQube issues and improve code quality
- Extracted level calculation to reduce cognitive complexity in core.py.
- Migrated tests from legacy np.random to modern Generator API.
- Replaced unused variables with underscores in tests and graphs.
- Moved write permissions in CI to job level for better security.
- Added comprehensive type hints and docstrings to all methods.
- Cleaned up commented code and unnecessary comments.

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master", "main" ]
 
 permissions:
-  contents: write
+  contents: read
   pull-requests: write
   issues: write
 
