--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -56,10 +56,9 @@ jobs:
         pip install -e .
     - name: Run tests
       run: |
-        pytest --junitxml=test-results-${{ matrix.python-version }}.xml
+        pytest --junitxml=test-results-${{ matrix.python-version }}.xml --cov=src --cov-report=xml
     - name: Run Filter Benchmark
-      run: |
-        python scripts/benchmark_filters.py
+...
     - name: Upload Test Results
       uses: actions/upload-artifact@v4
       with:
@@ -67,7 +66,26 @@ jobs:
         path: |
           test-results-${{ matrix.python-version }}.xml
           filter_benchmark_report.md
+          coverage.xml
       if: always()
+
+  sonar:
+    needs: tests
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' || github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - name: Download coverage report
+      uses: actions/download-artifact@v4
+      with:
+        name: test-results-3.13
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   graphs:
     runs-on: ubuntu-latest
