ci: use custom TOKEN_GH for SonarCloud scan

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -84,7 +84,7 @@ jobs:
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.TOKEN_GH }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   graphs:
