feat: enhance CI with parallel jobs and PR comments (#13)
* feat: enhance CI with parallel jobs, artifacts and PR comments

* fix: correct syntax in github-script step

* fix: relax dependency versions for python 3.9 compatibility and add pip caching

* fix: add pytest to dev requirements

* feat: add pr comment generation script

* feat: enhance workflow with image deployment and script comment

* refactor: replace print warning with warnings.warn for sonar compliance

* refactor: cleanup generate_graphs.py and remove sys.path hacks

* refactor: convert test_basic.py to pytest format and remove sys.path hacks

* refactor: add assertions to test_audio_processing.py and remove sys.path hacks

* refactor: remove sys.path hacks from test_multichannel.py

* style: fix linting issues in src/pyoctaveband/__init__.py

* style: fix linting issues in .github/scripts/comment_pr.py

* style: fix linting issues in generate_graphs.py

* style: fix linting issues in tests/test_audio_processing.py

* style: fix linting issues in tests/test_basic.py

* style: fix linting issues in tests/test_multichannel.py

* style: fix import sorting and remove unnecessary sys/sys.path in generate_graphs.py

* style: fix import sorting in tests/test_audio_processing.py

* style: fix import sorting and line length in tests/test_basic.py

* style: fix import sorting in tests/test_multichannel.py

* style: correctly sort imports in generate_graphs.py (local package last)

* style: correctly sort imports in tests/test_audio_processing.py (local package last)

* style: correctly sort imports in tests/test_basic.py (local package last)

* style: correctly sort imports in tests/test_multichannel.py (local package last)

* fix: add git pull to assets branch deploy logic and ensure proper permissions

* fix: upload graphs artifact before switching branches for deployment

* style: use collapsible blocks for images in PR comment

* refactor: address potential sonar issues (naming, matplotlib backend, idiom

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: Python CI
 
 on:
   push:
@@ -10,38 +10,176 @@ permissions:
   contents: read
 
 jobs:
-  ci:
+  quality:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
-    - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.2.2
-      with:
-        fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+    - uses: actions/checkout@v4
     - name: Set up Python 3.13
-      uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.3.0
+      uses: actions/setup-python@v5
       with:
         python-version: "3.13"
+        cache: 'pip'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
         pip install -e .
-    
     - name: Lint with Ruff
       run: ruff check .
-      
     - name: Type check with Mypy
       run: mypy src
-      
     - name: Security check with Bandit
       run: bandit -r src
 
+  tests:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+        cache: 'pip'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
+        pip install -e .
     - name: Run tests
       run: |
-        python tests/test_basic.py
-        python tests/test_multichannel.py
-        python tests/test_audio_processing.py
-
-    - name: Verify graph generation
+        pytest --junitxml=test-results-${{ matrix.python-version }}.xml --cov=src --cov-report=xml
+    - name: Run Filter Benchmark
       run: |
-        python generate_graphs.py
+        python scripts/benchmark_filters.py
+    - name: Upload Test Results
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results-${{ matrix.python-version }}
+        path: |
+          test-results-${{ matrix.python-version }}.xml
+          filter_benchmark_report.md
+          coverage.xml
+      if: always()
+
+  sonar:
+    needs: tests
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' || github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - name: Download coverage report
+      uses: actions/download-artifact@v4
+      with:
+        name: test-results-3.13
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarqube-scan-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN_GH }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  graphs:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+        cache: 'pip'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install -e .
+    - name: Generate graphs
+      run: python generate_graphs.py
+    
+    - name: Upload Graphs
+      uses: actions/upload-artifact@v4
+      with:
+        name: generated-graphs
+        path: .github/images/*.png
+
+    - name: Deploy Images to Assets Branch
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        
+        # Stash generated images temporarily
+        mkdir -p temp_images
+        cp .github/images/*.png temp_images/
+        
+        # Fetch all branches to ensure we can switch to assets if it exists
+        git fetch origin
+        
+        # Checkout assets branch or create orphan if it doesn't exist
+        if git show-ref --verify --quiet refs/remotes/origin/assets; then
+          git checkout assets
+          git pull origin assets
+        else
+          git checkout --orphan assets
+          git rm -rf .
+        fi
+        
+        # Create directory for this run
+        mkdir -p ${{ github.run_id }}
+        cp temp_images/*.png ${{ github.run_id }}/
+        
+        git add ${{ github.run_id }}/
+        git commit -m "Add graphs for run ${{ github.run_id }}"
+        git push origin assets
+      continue-on-error: true
+
+  pr-comment:
+    needs: [quality, tests, graphs]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
+    steps:
+    - uses: actions/checkout@v4
+    - name: Download Test Results
+      uses: actions/download-artifact@v4
+      with:
+        pattern: test-results-*
+        path: test-results
+    - name: Download Graphs
+      uses: actions/download-artifact@v4
+      with:
+        name: generated-graphs
+        path: generated-graphs
+    
+    - name: Generate Comment Body
+      run: python .github/scripts/comment_pr.py
+      env:
+        GITHUB_REPOSITORY: ${{ github.repository }}
+        GITHUB_RUN_ID: ${{ github.run_id }}
+
+    - name: Post PR Comment
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const fs = require('fs');
+          const body = fs.readFileSync('pr_comment_body.md', 'utf8');
+          
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: body
+          })
