--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,20 @@
-sonar.organization=jmrplens
+#  Copyright (c) 2026. Jose M. Requena-Plens
+
+# Project identification
 sonar.projectKey=jmrplens_PyOctaveBand
-sonar.projectName=PyOctaveBand
-sonar.projectVersion=0.1.0
+sonar.organization=jmrplens
+
+# Path to sources and tests
 sonar.sources=src
 sonar.tests=tests
-sonar.python.version=3.8, 3.9, 3.10, 3.11, 3.12, 3.13
+sonar.python.version=3.13
+
+# Encoding of the source files
+sonar.sourceEncoding=UTF-8
+
+# Coverage configuration
 sonar.python.coverage.reportPaths=coverage.xml
-sonar.exclusions=tests/**,setup.py,generate_graphs.py
+
+# Exclusions
+sonar.exclusions=**/__pycache__/**, **/*.png, **/*.md
+sonar.test.inclusions=tests/**/test_*.py
