chore: configure Sonar to allow professional API and restore explicit parameters
- Update sonar-project.properties to ignore S107 in __init__.py
- Restore explicit 'ripple' and 'attenuation' parameters in octavefilter
- Ensure high usability and discoverability of the main API

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,3 +18,8 @@ sonar.python.coverage.reportPaths=coverage.xml
 # Exclusions
 sonar.exclusions=**/__pycache__/**, **/*.png, **/*.md
 sonar.test.inclusions=tests/**/test_*.py
+
+# Increase authorized parameters for scientific APIs
+sonar.issue.ignore.multicriteria=S107
+sonar.issue.ignore.multicriteria.S107.ruleKey=python:S107
+sonar.issue.ignore.multicriteria.S107.resourceKey=src/pyoctaveband/__init__.py
