test: automate 100% coverage reporting with conftest.py
- Added tests/conftest.py to disable Numba JIT during tests automatically
- Ensured JIT is re-enabled for performance tests
- Added 'coverage' target to Makefile
- Updated CI environment for explicit coverage support

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -55,6 +55,8 @@ jobs:
         pip install -r requirements-dev.txt
         pip install -e .
     - name: Run tests
+      env:
+        NUMBA_DISABLE_JIT: 1
       run: |
         pytest --junitxml=test-results-${{ matrix.python-version }}.xml --cov=src --cov-report=xml
     - name: Upload Test Results
