--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -71,7 +71,7 @@ jobs:
   assets:
     needs: tests
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: write
     steps:
@@ -97,7 +97,7 @@ jobs:
         python generate_graphs.py
         python scripts/benchmark_filters.py
         
-    - name: Commit and Push changes
+    - name: Commit and Push changes (Amend)
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
@@ -108,17 +108,9 @@ jobs:
         if git diff --staged --quiet; then
           echo "No changes in assets detected."
         else
-          echo "Changes detected, pushing updates..."
-          
-          if [ "${{ github.event_name }}" == "pull_request" ]; then
-            # Standard commit for PRs to avoid rebase hell
-            git commit -m "chore: update assets for PR"
-            git push origin HEAD:${{ github.head_ref }}
-          else
-            # Clean amend for main branch
-            git commit --amend --no-edit
-            git push origin ${{ github.ref_name }} --force
-          fi
+          echo "Changes detected, amending commit..."
+          git commit --amend --no-edit
+          git push origin ${{ github.ref_name }} --force
         fi
 
   sonar:
