--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -97,8 +97,23 @@ jobs:
       issues: write
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install -e .
+        
+    - name: Run technical benchmark
+      run: python scripts/benchmark_filters.py
+      
     - name: Download Test Results
-      uses: actions/download-artifact@v4
+      uses: actions/upload-artifact@v4
       with:
         pattern: test-results-*
         path: test-results
