--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,11 +36,13 @@ jobs:
       run: bandit -r src
 
   tests:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     permissions:
       contents: read
     strategy:
+      fail-fast: false
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.11", "3.12", "3.13"]
     steps:
     - uses: actions/checkout@v4
@@ -54,18 +56,18 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
-        pip install -e .
+        pip install .
     - name: Run tests
       env:
         NUMBA_DISABLE_JIT: 1
       run: |
-        pytest --junitxml=test-results-${{ matrix.python-version }}.xml --cov=src --cov-report=xml
+        pytest --junitxml=test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml --cov=src --cov-report=xml
     - name: Upload Test Results
       uses: actions/upload-artifact@v4
       with:
-        name: test-results-${{ matrix.python-version }}
+        name: test-results-${{ matrix.os }}-${{ matrix.python-version }}
         path: |
-          test-results-${{ matrix.python-version }}.xml
+          test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml
           coverage.xml
       if: always()
 
@@ -80,7 +82,7 @@ jobs:
     - name: Download coverage report
       uses: actions/download-artifact@v4
       with:
-        name: test-results-3.13
+        name: test-results-ubuntu-latest-3.13
     - name: SonarCloud Scan
       uses: SonarSource/sonarqube-scan-action@master
       env:
