--- a/.github/workflows/manual_verify_install.yml
+++ b/.github/workflows/manual_verify_install.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   verify-pypi-install:
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: read
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -21,15 +23,16 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install PyOctaveBand
-        run: |
-          python -m pip install --upgrade pip
-          if [ -z "${{ inputs.version }}" ]; then
-            pip install pyoctaveband
-          else
-            pip install pyoctaveband==${{ inputs.version }}
-          fi
-        shell: bash
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install latest PyOctaveBand
+        if: ${{ inputs.version == '' }}
+        run: pip install pyoctaveband
+
+      - name: Install specific PyOctaveBand version
+        if: ${{ inputs.version != '' }}
+        run: pip install pyoctaveband==${{ inputs.version }}
 
       - name: Verify Import
         run: python -c "import pyoctaveband; print('Successfully imported pyoctaveband version:', pyoctaveband.__version__)"
